--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,10 @@
 {
   "manifest_version": 3,
   "name": "YouTube Link Extractor",
-  "version": "1.0",
-  "description": "Extract video links and metadata from YouTube.",
+  "version": "1.1",
+  "description": "Extract YouTube video links using native CSS and DOM.",
   "permissions": [
     "activeTab",
-    "scripting",
     "storage"
   ],
   "host_permissions": [
@@ -23,7 +22,7 @@
     {
       "matches": ["*://*.youtube.com/*"],
       "js": ["content.js"],
-      "css": ["output.css"]
+      "css": ["styles.css"]
     }
   ],
   "background": {
