--- a/manifest.json
+++ b/manifest.json
@@ -3,13 +3,8 @@
   "name": "YouTube Link Extractor",
   "version": "1.1",
   "description": "Extract YouTube video links using native CSS and DOM.",
-  "permissions": [
-    "activeTab",
-    "storage"
-  ],
-  "host_permissions": [
-    "*://*.youtube.com/*"
-  ],
+  "permissions": ["activeTab", "storage"],
+  "host_permissions": ["*://*.youtube.com/*"],
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
@@ -21,11 +16,11 @@
   "content_scripts": [
     {
       "matches": ["*://*.youtube.com/*"],
-      "js": ["content.js"],
+      "js": ["dist/content.js"],
       "css": ["styles.css"]
     }
   ],
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "dist/background.js"
   }
 }
