--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "version": "1.1",
   "description": "Extract YouTube video links using native CSS and DOM.",
   "permissions": ["activeTab", "storage"],
-  "host_permissions": ["*://*.youtube.com/*"],
+  "host_permissions": ["*://*.youtube.com/*", "http://localhost:8000/*", "http://127.0.0.1:8000/*"],
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
